objects/Url_Estimados__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Utiizado para almacenar el URL y demas parametros necesarios para invocar el OS Presupuesto de Reparacion que se visualizara en la comunidad</description>
    <fields>
        <fullName>URL_Facebook__c</fullName>
        <label>URL_Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Instagram__c</fullName>
        <label>URL_Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_Twitter_del__c</fullName>
        <label>URL_Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Url Estimados</label>
</CustomObject>